fix: graphiql editor not showing on first render

--- a/pages/graphiql.module.css
+++ b/pages/graphiql.module.css
@@ -1,7 +1,4 @@
 .graphiql-wrapper {
   height: 100vh;
-}
-
-.graphiql-wrapper > :global(.graphiql-container) * {
-  box-sizing: unset;
+  width: 100vw;
 }
